crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__unaliased-collections-abc-set-import_PYI025_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI025 [*] Use `from collections.abc import Set as AbstractSet` to avoid confusion with the `set` builtin
  --> PYI025_1.py:10:33
   |
 9 | def f():
10 |     from collections.abc import Set  # PYI025
   |                                 ^^^
help: Alias `Set` to `AbstractSet`
   |
9  | def f():
   -     from collections.abc import Set  # PYI025
10 +     from collections.abc import Set as AbstractSet  # PYI025
11 |
   |

PYI025 [*] Use `from collections.abc import Set as AbstractSet` to avoid confusion with the `set` builtin
  --> PYI025_1.py:14:51
   |
13 | def f():
14 |     from collections.abc import Container, Sized, Set, ValuesView  # PYI025
   |                                                   ^^^
15 |
16 |     GLOBAL: Set[int] = set()
   |
help: Alias `Set` to `AbstractSet`
   |
13 | def f():
   -     from collections.abc import Container, Sized, Set, ValuesView  # PYI025
14 +     from collections.abc import Container, Sized, Set as AbstractSet, ValuesView  # PYI025
15 |
   -     GLOBAL: Set[int] = set()
16 +     GLOBAL: AbstractSet[int] = set()
17 |
18 |     class Class:
   -         member: Set[int]
19 +         member: AbstractSet[int]
   |
