crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__unaliased-collections-abc-set-import_PYI025_2.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI025 [*] Use `from collections.abc import Set as AbstractSet` to avoid confusion with the `set` builtin
 --> PYI025_2.pyi:3:29
  |
1 | """Tests to ensure we correctly rename references inside `__all__`"""
2 |
3 | from collections.abc import Set
  |                             ^^^
4 |
5 | __all__ = ["Set"]
  |
help: Alias `Set` to `AbstractSet`
   |
2  |
   - from collections.abc import Set
3  + from collections.abc import Set as AbstractSet
4  |
   - __all__ = ["Set"]
5  + __all__ = ["AbstractSet"]
6  |
7  | if True:
   -     __all__ += [r'''Set''']
8  +     __all__ += ["AbstractSet"]
9  |
10 | if 1:
   -     __all__ += ["S" "e" "t"]
11 +     __all__ += ["AbstractSet"]
12 |
13 | if not False:
   -     __all__ += ["Se" 't']
14 +     __all__ += ["AbstractSet"]
   |
note: This is an unsafe fix and may change runtime behavior
